@@ -372,10 +372,7 @@ if pymol_launch != 3: # if this isn't a dry run
     def finish_launching():
         e=threading.Event()
         import pymol # wait for import to complete
-#        __main__.pymol = pymol
-#        while not hasattr(__main__,'pymol'):
-#            e.wait(0.01)
-        while not _cmd.ready():
+        while not _cmd.ready(): # wait for the C library to initialize
             e.wait(0.01)
         while not hasattr(pymol,'xray'): # make sure symmetry module has time to start...
             e.wait(0.01)
